# json-viewer

./: .gitignore  Cargo.toml  Makefile  README.md  gen_icon.py
.github/workflows/: release.yml
JsonViewApp/: project.yml
JsonViewApp/Brace.xcodeproj/: project.pbxproj
JsonViewApp/DevKit.xcodeproj/: project.pbxproj
JsonViewApp/JsonViewApp/: App.swift  Info.plist  JsonViewApp-Bridging-Header.h
JsonViewApp/JsonViewApp.xcodeproj/: project.pbxproj
JsonViewApp/JsonViewApp/Sources/: AppModel.swift  ContentView.swift  EditorView.swift  IssuesView.swift  JSONTreeView.swift  Models.swift  RustBridge.swift  SplitViewAutosaver.swift  StatusBarView.swift  Theme.swift  ToolbarView.swift
JsonViewApp/JsonViewApp/en.lproj/: InfoPlist.strings  Localizable.strings
assets/: entitlements.plist
assets/icons/: README.md  jsonviewer.icns
docs/superpowers/plans/: 2026-06-07-devkit-merge.md
docs/superpowers/specs/: 2026-06-06-jsonview-design.md
homebrew/: brace.rb  devkit.rb  jsonview.rb
jsonview-core/: Cargo.toml
jsonview-core/src/: compose.rs  folding.rs  lib.rs  model.rs  path.rs  smells.rs  template.rs
jsonview-ffi/: Cargo.toml
jsonview-ffi/include/: jsonview.h
jsonview-ffi/src/: lib.rs
scripts/: publish.sh
src/: app.rs  compose.rs  config.rs  git.rs  highlight.rs  i18n.rs  icons.rs  lib.rs  main.rs  parser.rs  path.rs  smells.rs  telemetry.rs  template.rs  theme.rs  workspace.rs
src/ui/: compose.rs  editor.rs  history.rs  issues.rs  keys.rs  replace.rs  settings.rs  sidebar.rs  status.rs  template.rs  toolbar.rs  tree.rs  view_mode.rs
(+40 files in other folders)
